feat: update version and context